; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_svn/extr_client.c_svn_ra_svn__init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_svn/extr_client.c_svn_ra_svn__init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, i32* }
%struct.TYPE_5__ = type { i64 }

@svn_ra_svn__init.checklist = internal constant [3 x %struct.TYPE_6__] [%struct.TYPE_6__ { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i32 0, i32 0), i32* inttoptr (i64 128 to i32*) }, %struct.TYPE_6__ { i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i32 0, i32 0), i32* inttoptr (i64 129 to i32*) }, %struct.TYPE_6__ zeroinitializer], align 16
@.str = private unnamed_addr constant [9 x i8] c"svn_subr\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"svn_delta\00", align 1
@svn_ver_equal = common dso_local global i32 0, align 4
@SVN_VER_MAJOR = common dso_local global i64 0, align 8
@SVN_ERR_VERSION_MISMATCH = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [46 x i8] c"Unsupported RA loader version (%d) for ra_svn\00", align 1
@ra_svn_vtable = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_ra_svn__init(%struct.TYPE_5__* %0, i32** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = call i32 (...) @svn_ra_svn_version()
  %9 = load i32, i32* @svn_ver_equal, align 4
  %10 = call i32 @svn_ver_check_list2(i32 %8, %struct.TYPE_6__* getelementptr inbounds ([3 x %struct.TYPE_6__], [3 x %struct.TYPE_6__]* @svn_ra_svn__init.checklist, i64 0, i64 0), i32 %9)
  %11 = call i32 @SVN_ERR(i32 %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @SVN_VER_MAJOR, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %3
  %18 = load i32, i32* @SVN_ERR_VERSION_MISMATCH, align 4
  %19 = call i32 @_(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0))
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = call i32* @svn_error_createf(i32 %18, i32* null, i32 %19, i64 %22)
  store i32* %23, i32** %4, align 8
  br label %27

24:                                               ; preds = %3
  %25 = load i32**, i32*** %6, align 8
  store i32* @ra_svn_vtable, i32** %25, align 8
  %26 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %26, i32** %4, align 8
  br label %27

27:                                               ; preds = %24, %17
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_ver_check_list2(i32, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @svn_ra_svn_version(...) #1

declare dso_local i32* @svn_error_createf(i32, i32*, i32, i64) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
